syntax = "proto3";

import "google/protobuf/any.proto";

package host_instance;

message ClientID {
    uint64 value = 1;
}

// Origin: Client
// Target: Instance
message ClientMessage {
    ClientID client_id = 1;
    google.protobuf.Any game_input_message = 2;
}

// Origin: Instance
// Target: Client
message InstanceDirectMessage {
    ClientID client_id = 1;
    google.protobuf.Any game_output_message = 2;
}

// Origin: Instance
// Target: All Clients
message InstanceBroadcast {
    google.protobuf.Any game_output_message = 1;
}

message InstanceMessage {
    repeated InstanceDirectMessage direct_messages = 1;
    optional InstanceBroadcast broadcast = 2;
}